Add city and user.city

--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -12,6 +12,7 @@
                 <th>Phonenumber</th>
                 <th>Address</th>
                 <th>Zipcode</th>
+                <th>City</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -24,6 +25,7 @@
                 <td>{{ user.phoneNumber }}</td>
                 <td>{{ user.address }}</td>
                 <td>{{ user.zipCode }}</td>
+                <td>{{ user.city }}</td>
                 <td>
                     <ul>
                         <li>
